--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.6",
     "apexcharts": "^3.27.1",
+    "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
+    "googleapis": "^136.0.0",
     "install": "^0.13.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0",
