--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.6",
     "apexcharts": "^3.27.1",
+    "axios": "^1.6.8",
     "install": "^0.13.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
