--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,6 +49,8 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1"
+    "file-loader": "^6.2.0",
+    "react-scripts": "^5.0.1",
+    "webpack": "^5.91.0"
   }
 }
