--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^5.2.0",
+    "react-select": "^5.8.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
