--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^17.0.2",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
