--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
     "googleapis": "^136.0.0",
     "install": "^0.13.0",
     "react": "^17.0.2",
