--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^3.6.0",
     "googleapis": "^136.0.0",
     "install": "^0.13.0",
+    "notistack": "^3.0.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.10.2",
